[package]
authors = ["Jimmy Cuadra <jimmy@jimmycuadra.com>"]
categories = ["command-line-interface"]
description = "Manipulate strings according to the word parsing rules of the UNIX Bourne shell."
documentation = "https://docs.rs/shellwords"
edition = "2018"
homepage = "https://github.com/jimmycuadra/rust-shellwords"
keywords = ["bash", "sh", "shell"]
license = "MIT"
name = "shellwords"
readme = "README.md"
repository = "https://github.com/jimmycuadra/rust-shellwords"
version = "1.0.0"

[dependencies]
lazy_static = "1.2.0"
regex = "1.1.0"
